--- a/main.html
+++ b/main.html
@@ -7,7 +7,11 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<div class="container">
+	<div><span class="green"></span></div>
+	<div><span class="yellow"></span></div>
+	<div><span class="red"></span></div>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
